--- a/EWHC_FRANCHISING/EWHC_FRANCHISING.csproj
+++ b/EWHC_FRANCHISING/EWHC_FRANCHISING.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data">
       <Private>True</Private>
     </Reference>
