--- a/EWHC_FRANCHISING/EWHC_FRANCHISING.csproj
+++ b/EWHC_FRANCHISING/EWHC_FRANCHISING.csproj
@@ -13,6 +13,25 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <IsWebBootstrapper>true</IsWebBootstrapper>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Web</InstallFrom>
+    <UpdateEnabled>true</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <InstallUrl>http://localhost:8080/</InstallUrl>
+    <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
+    <WebPage>publish.htm</WebPage>
+    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +54,18 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>eastwest.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>246D91611812AC86D16C9FACF293EADF2AD08182</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>EWHC_FRANCHISING_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
@@ -102,6 +133,7 @@
     <Compile Include="admin_window.xaml.cs">
       <DependentUpon>admin_window.xaml</DependentUpon>
     </Compile>
+    <Compile Include="classes\accounts.cs" />
     <Compile Include="classes\ac_box.cs" />
     <Compile Include="classes\binding.cs" />
     <Compile Include="classes\deleterecord.cs" />
@@ -110,6 +142,7 @@
     <Compile Include="classes\insert_logs.cs" />
     <Compile Include="classes\plan_count.cs" />
     <Compile Include="classes\regions.cs" />
+    <Compile Include="classes\subgroups.cs" />
     <Compile Include="classes\updaterecord.cs" />
     <Compile Include="classes\users.cs" />
     <Compile Include="loading.xaml.cs">
@@ -242,14 +275,16 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="App.config" />
+    <None Include="EWHC_FRANCHISING_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
+    <None Include="ssl\ca_bundle.pem" />
+    <None Include="certificate.pem" />
+    <None Include="ssl\private.pem" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="image\magnify.png" />
@@ -312,6 +347,16 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="eastwest.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="image\NewFolder1\" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
